PIRATE-2862  Header overflow fix on desktop version

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -394,8 +394,11 @@ blockquote p {
 	&.stuckMenu.isStuck {
 		width: 100%;
 		z-index: 9999;
-		max-height: 100vh;
-		overflow-y: auto;
+
+		@media @tablet {
+			max-height: 100vh;
+			overflow-y: auto;
+		}
 	}
 
 }
